--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 body{
-    height: 100vh;
+    /*height: 100vh;*/
+    overflow-y: hidden;
 }
 
 #root{
-    height: 100%;
+    /*height: 100vh;*/
 }
